tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Slimeball-AAAAAAAAAAAAAAAAAAAIdQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2165,
  "prerequisites": [
    2163
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Slimeballs aren't super useful, but you can easily breed this bee to make them. It's a necessary step on the way to Oil though. You will need a Congealed Slime Block beneath the bee housing. Breed them from Clay and Marshy.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Slimeball",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2163
  ],
  "rewards": [],
  "tasks": []
}
